--- a/Arkenea/appsettings.json
+++ b/Arkenea/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.176.44\\SQLEXPRESS2019;Database=Arkenea;User Id=development;Password=D3v3lp@76%$6;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=test;Database=Arkenea;User Id=development;Password=D3v3lp@76%$6;MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*"
 }
